# gcp-samples

./: .gitignore  README.md  pyproject.toml
app/: __main__.py
credentials/: .gitkeep
fichiers/: .gitkeep
